# icalendar

./: pyproject.toml
src/icalendar/: cal.py  prop.py
src/icalendar/tests/: test_pandas_interface.py  test_timezoned.py  test_unit_prop.py
