[tool.poetry]
name = "icalendar"
version = "5.0.4"
description = ""
authors = ["Mark <strategy155@gmail.com>"]



[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2022.1"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
