[tool.poetry]
name = "icalendar"
version = "5.0.4"
description = ""
authors = ["Mark <strategy155@gmail.com>"]



[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2023.3"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.72.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
